--- a/app/src/main/res/layout/item_dialog_zero_vision_5.xml
+++ b/app/src/main/res/layout/item_dialog_zero_vision_5.xml
@@ -8,6 +8,29 @@
     app:layout_constrainedHeight="true"
     android:layout_height="wrap_content">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:padding="8dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:background="@color/white"
+            android:layout_height="160dp"
+            android:layout_weight="0.35"
+            android:src="@drawable/zero_vision_ntitled_1"/>
+
+        <ImageView
+            android:layout_width="100dp"
+            android:background="@color/white"
+            android:layout_height="160dp"
+            android:paddingEnd="2dp"
+            android:layout_weight="0.65"
+            android:src="@drawable/zero_vision_ntitled_3"/>
+
+    </LinearLayout>
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView3"
         android:layout_width="match_parent"
@@ -25,6 +48,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+
 
             <TextView
                 android:layout_width="match_parent"
@@ -91,6 +116,52 @@
                 android:textSize="16sp"
                 android:fontFamily="@font/ru_hero"
                 android:text="text_worker"
+                android:textColor="@color/text_recycle"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@color/chip_appbar"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp"
+        app:strokeColor="@color/name_devices_appbar"
+        app:strokeWidth="1dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:textColor="@color/chip_appbar"
+                android:background="@color/floatingActionButton"
+                android:fontFamily="@font/ru_hero"
+                android:gravity="center"
+                android:text="@string/zero_vision_engineer"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/text_zero_engineer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:textSize="16sp"
+                android:fontFamily="@font/ru_hero"
+                android:text="text_engineer"
                 android:textColor="@color/text_recycle"
                 android:textStyle="bold" />
 
