--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="black_memo">#232323</color>
     <color name="white">#FFFFFFFF</color>
     <color name="backgroundRecycle">#FFFFFF</color>
     <color name="backgroundItem">#F3F3F3</color>
@@ -18,4 +19,6 @@
     <color name="red_text_zero_vision">#C92F65</color>
     <color name="floatingActionButton">#265271</color>
     <color name="text_input_assembly">#EFD2A7</color>
+    <color name="zero_vision_memo">#FAF261</color>
+    <color name="orange_zero_vision">#E3820C</color>
 </resources>
