--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -23,5 +23,10 @@
         android:title="График"
         android:enabled="true"
         android:icon="@drawable/free_icon_calendar1"/>
+    <item
+        android:id="@+id/shiftScheduleFragment"
+        android:title="Смена"
+        android:enabled="true"
+        android:icon="@drawable/baseline_bolt_24"/>
 
 </menu>
