--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
     <color name="backgroundItem">#F3F3F3</color>
     <color name="text_recycle">#214763</color>
     <color name="text_recycle_smile">#567993</color>
+    <color name="background_calendar_month">#4D567993</color>
+    <color name="background_calendar_month_prev">#00567993</color>
     <color name="chip_appbar">#D6E7F3</color>
     <color name="name_devices_appbar">#A7D0EF</color>
     <color name="red_schema">#C9322F</color>
