--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="calendar_layout_width">50dp</dimen>
     <dimen name="calendar_layout_height">61dp</dimen>
     <dimen name="single_calendar_margin">6dp</dimen>
+    <dimen name="single_calendar_full_margin">1dp</dimen>
+    <dimen name="calendar_item_margin">4dp</dimen>
 </resources>
