--- a/app/src/main/res/layout/item_full_calendar_month.xml
+++ b/app/src/main/res/layout/item_full_calendar_month.xml
@@ -12,12 +12,13 @@
                 android:textSize="20sp"
                 android:layout_marginBottom="2dp"
                 android:layout_marginTop="2dp"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
+                android:paddingTop="2dp"
+                android:paddingBottom="10dp"
+               
 
                 android:layout_gravity="top|center"
                 android:id="@+id/tv_calendar_date"
-                android:textStyle="bold"
+
                 style="@style/TextAppearance.MaterialComponents.Subtitle1"
                 android:textColor="@color/calendar_background"
                 android:gravity="center"
@@ -25,8 +26,15 @@
                 android:layout_height="wrap_content" />
 
             <LinearLayout
-                android:layout_marginStart="1dp"
-                android:layout_marginEnd="1dp"
+                android:layout_width="match_parent"
+                android:background="@drawable/home_background"
+                android:alpha="0.3"
+                android:layout_height="2dp" />
+
+
+            <LinearLayout
+                android:layout_marginStart="2dp"
+                android:layout_marginEnd="2dp"
                 android:id="@+id/image_prev_night_shift"
                 android:gravity="start"
                 android:alpha="0.5"
@@ -51,8 +59,8 @@
             </LinearLayout>
 
             <TextView
-                android:layout_marginStart="1dp"
-                android:layout_marginEnd="1dp"
+                android:layout_marginStart="2dp"
+                android:layout_marginEnd="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
@@ -64,9 +72,9 @@
                 android:textColor="@color/chip_appbar"/>
 
             <LinearLayout
-                android:layout_marginStart="1dp"
-                android:layout_marginEnd="1dp"
-                android:layout_marginBottom="1dp"
+                android:layout_marginStart="2dp"
+                android:layout_marginEnd="2dp"
+                android:layout_marginBottom="2dp"
                 android:id="@+id/image_nex_night_shift"
                 android:alpha="0.5"
                 android:gravity="end"
