--- a/app/src/main/res/layout/item_full_calendar_prev_month.xml
+++ b/app/src/main/res/layout/item_full_calendar_prev_month.xml
@@ -1,82 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/background_calendar_month_prev"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_calendar_date"
+            style="@style/TextAppearance.MaterialComponents.Subtitle1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_gravity="top|center"
+            android:layout_marginTop="16dp"
+            android:alpha="0.5"
+            android:textColor="@color/name_devices_appbar"
+            android:textSize="20sp" />
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:alpha="0.5"
+            android:gravity="start"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="16dp"
+                android:src="@drawable/arrow_right" />
+
+            <TextView
+                style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="A"
+                android:textColor="@color/chip_appbar"
+                android:textSize="10sp" />
+
+        </LinearLayout>
+
+        <TextView
+            style="@style/TextAppearance.MaterialComponents.Subtitle1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:alpha="0.5"
+            android:text="B"
+            android:textColor="@color/chip_appbar"
+            android:textSize="14sp"
+            android:visibility="gone" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/background_calendar_month_prev"
-            android:orientation="vertical">
+            android:alpha="0.5"
+            android:gravity="end"
+            android:orientation="horizontal"
+            android:visibility="invisible">
 
             <TextView
-                android:textSize="20sp"
-                android:layout_marginTop="16dp"
-                android:layout_gravity="top|center"
-                android:id="@+id/tv_calendar_date"
-
-                android:alpha="0.5"
                 style="@style/TextAppearance.MaterialComponents.Subtitle1"
-                android:textColor="@color/name_devices_appbar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <LinearLayout
-
-                android:gravity="start"
-                android:alpha="0.5"
-                android:layout_marginTop="8dp"
-                android:visibility="invisible"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="16dp"
-                    android:src="@drawable/arrow_right"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="10sp"
-                    android:text="A"
-                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
-                    android:textColor="@color/chip_appbar"/>
-
-            </LinearLayout>
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:alpha="0.5"
-                android:visibility="invisible"
-                android:layout_gravity="center"
-                android:text="B"
-                style="@style/TextAppearance.MaterialComponents.Subtitle1"
-                android:textColor="@color/chip_appbar"/>
+                android:gravity="center"
+                android:text="C"
+                android:textColor="@color/chip_appbar"
+                android:textSize="10sp" />
 
-            <LinearLayout
-                android:alpha="0.5"
-                android:gravity="end"
-                android:visibility="invisible"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="10sp"
-                    android:text="C"
-                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
-                    android:textColor="@color/chip_appbar"/>
-
-                <ImageView
-                    android:layout_gravity="end"
-                    android:layout_width="wrap_content"
-                    android:layout_height="16dp"
-                    android:src="@drawable/arrow_right"/>
-
-            </LinearLayout>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="16dp"
+                android:layout_gravity="end"
+                android:src="@drawable/arrow_right" />
 
         </LinearLayout>
+
+    </LinearLayout>
 </layout>
